[package]
name = "search_tickets_emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
log = "0.4.0"
env_logger = "0.9.0"
async-stream = "0.3.3"
actix-files = "0.6.2"
heed = "0.11.0"
md5 = "0.7.0"
sha1 = "0.10.5"
serde = "1.0.147"
lazy_static = "1.4.0"
serde_json = "1.0.88"
